--- a/portfolio/Client/wwwroot/index.html
+++ b/portfolio/Client/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>portfolio</title>
     <base href="/" />
+    <link rel="shortcut icon" type="image/png" href="2021-01-15.png">
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="portfolio.Client.styles.css" rel="stylesheet" />
