MultiIdiomas(Español/ingles) Portafolio

--- a/portfolio/Client/wwwroot/index.html
+++ b/portfolio/Client/wwwroot/index.html
@@ -24,6 +24,11 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script>window.language = {
+            get: () => window.localStorage['language'],
+            set: (value) => window.localStorage['language'] = value
+        };
+    </script>
 </body>
 
 </html>
